# dh4pmp_tools

./: .gitignore  CLAUDE_WORKFLOW.md  LICENSE  README.md  dh4pmp_tools.code-workspace
tools/bibfetcher/: .gitignore  CHANGELOG.md  FUTURE_ENHANCEMENTS.md  INSTALL.md  POSTPROCESSING.md  README.md  pyproject.toml
tools/bibfetcher/bibfetcher/: __init__.py  bibfetcher.py  cli.py  config.py  index.py  input_identifier.py  postprocessor.py  user_config.py
tools/bibfetcher/bibfetcher/fetchers/: __init__.py  base.py  crossref.py  doi.py
tools/bibfetcher/bibfetcher/pdf/: __init__.py  extractor.py
tools/bibfetcher/bibfetcher/utils/: __init__.py  clipboard.py  keys.py  latex.py
tools/bibfetcher/tests/: test_doi_extraction.py
tools/citation_tools/: CONFIG_UPDATE.md  FIXES.md  INSTALL.md  NEW_FEATURES.md  QUICK_INSTALL.md  README.md  USAGE.md  pyproject.toml  setup.py
tools/citation_tools/citation_tools/: __init__.py  bibtex_index.py  citation_converter.py  cli.py  config.py  csl_manager.py  setup_config.py  user_config.py
tools/citation_tools/citation_tools/styles/: fund-og-forskning.csl
tools/dh4pmp/: pyproject.toml
tools/dh4pmp/dh4pmp/: __init__.py
tools/dh4pmp/dh4pmp/cli/: main.py
tools/dh4pmp/dh4pmp/cli/commands/: create.py
tools/dh4pmp/dh4pmp/project/: discover.py  generator.py  resolver.py
tools/dh4pmp/dh4pmp/templates/common/: CHANGELOG.md.j2  CLAUDE_WORKFLOW.md.j2  README.md.j2  claude_settings.json.j2  config.example.yaml.j2  conftest.py.j2  cursor_rules.md.j2  dodo.py.j2  environment.yaml.j2  gitignore  handoff_log.md.j2  pyproject.toml.j2  pyrightconfig.json.j2  src_init.py.j2
tools/dh4pmp/dh4pmp/templates/full/: files.yaml  folders.yaml
tools/dh4pmp/dh4pmp/templates/minimal/: files.yaml  folders.yaml
